@@ -191,42 +191,17 @@ void Group::SplitMoney(uint32 copper, uint32 silver, uint32 gold, uint32 platinu
   }
 }
 
-bool Group::AddMember(Mob* newmember, const char *NewMemberName, int32 CharacterID)
-{
-	bool InZone = true;
-
-	// This method should either be passed a Mob*, if the new member is in this zone, or a NULL Mob*
-	// and the name and CharacterID of the new member, if they are out of zone.
-	//
-	if(!newmember && !NewMemberName)
-		return false;
-
-	if(!newmember)
-		InZone = false;
-	else
-	{
-		NewMemberName = newmember->GetCleanName();
-
-		if(newmember->IsClient())
-			CharacterID = newmember->CastToClient()->CharacterID();
-	}
-
-	uint32 i = 0;
-
-	// See if they are already in the group
-	//
-	 for (i = 0; i < MAX_GROUP_MEMBERS; ++i)
-		if(!strcasecmp(membername[i], NewMemberName))
+bool Group::AddMember(Mob* newmember) {
+	uint32 i=0;
+	//see if they are allready in the group
+	 for (i = 0; i < MAX_GROUP_MEMBERS; i++) {
+		if(members[i] != NULL && !strcasecmp(members[i]->GetCleanName(), newmember->GetCleanName()))
 			return false;
-
-	// Put them in the group
-	for (i = 0; i < MAX_GROUP_MEMBERS; ++i)
-	{
-		if (membername[i][0] == '\0')
-		{
-			if(InZone)
-				members[i] = newmember;
-
+	}
+	//put them in the group
+	for (i = 0; i < MAX_GROUP_MEMBERS; i++) {
+		if (members[i] == NULL) {
+			members[i] = newmember;
 			break;
 		}
 	}
@@ -234,14 +209,13 @@ bool Group::AddMember(Mob* newmember, const char *NewMemberName, int32 Character
 	if (i == MAX_GROUP_MEMBERS)
 		return false;
 
-	strcpy(membername[i], NewMemberName);
-
+	strcpy(membername[i], newmember->GetCleanName());
 	int x=1;
 	
 	//build the template join packet	
 	EQApplicationPacket* outapp = new EQApplicationPacket(OP_GroupUpdate,sizeof(GroupJoin_Struct));
 	GroupJoin_Struct* gj = (GroupJoin_Struct*) outapp->pBuffer;	
-	strcpy(gj->membername, NewMemberName);
+	strcpy(gj->membername, newmember->GetCleanName());
 	gj->action = groupActJoin;
 
 	gj->leader_aas = LeaderAbilities;
@@ -255,11 +229,11 @@ bool Group::AddMember(Mob* newmember, const char *NewMemberName, int32 Character
 				members[i]->CastToClient()->QueuePacket(outapp);
 
 				//put new member into existing person's list
-				strcpy(members[i]->CastToClient()->GetPP().groupMembers[this->GroupCount()-1], NewMemberName);
+				strcpy(members[i]->CastToClient()->GetPP().groupMembers[this->GroupCount()-1], newmember->GetCleanName());
 			}
 
 			//put this existing person into the new member's list
-			if(InZone && newmember->IsClient()) {
+			if(newmember->IsClient()) {
 				if(IsLeader(members[i]))
 					strcpy(newmember->CastToClient()->GetPP().groupMembers[0], members[i]->GetCleanName());
 				else {
@@ -269,46 +243,22 @@ bool Group::AddMember(Mob* newmember, const char *NewMemberName, int32 Character
 			}
 		}
 	}
+	
+	//put new member in his own list.
+	if(newmember->IsClient())
+		strcpy(newmember->CastToClient()->GetPP().groupMembers[x], newmember->GetCleanName());
 
-	if(InZone)
-	{
-		//put new member in his own list.
-		newmember->SetGrouped(true);
-
-		if(newmember->IsClient())
-		{
-			strcpy(newmember->CastToClient()->GetPP().groupMembers[x], NewMemberName);
-			newmember->CastToClient()->Save();
-			database.SetGroupID(NewMemberName, GetID(), newmember->CastToClient()->CharacterID());
-			SendMarkedNPCsToMember(newmember->CastToClient());
-		}
+	newmember->SetGrouped(true);
+	
+	if(newmember->IsClient()) {
+		newmember->CastToClient()->Save();
+		database.SetGroupID(newmember->GetCleanName(), GetID(), newmember->CastToClient()->CharacterID());
+		SendMarkedNPCsToMember(newmember->CastToClient());
 	}
-	else
-		database.SetGroupID(NewMemberName, GetID(), CharacterID);
-
+	
 	safe_delete(outapp);
 
 	return true;
-}
-
-void Group::AddMember(const char *NewMemberName)
-{
-	// This method should be called when both the new member and the group leader are in a different zone to this one.
-	//
-	 for (uint32 i = 0; i < MAX_GROUP_MEMBERS; ++i)
-		if(!strcasecmp(membername[i], NewMemberName))
-		{
-			return;
-		}
-
-	for (uint32 i = 0; i < MAX_GROUP_MEMBERS; ++i)
-	{
-		if (membername[i][0] == '\0')
-		{
-			strcpy(membername[i], NewMemberName);
-			break;
-		}
-	}
 }
 
 void Group::QueuePacket(const EQApplicationPacket *app, bool ack_req)
